New UI/UX Fixes

--- a/app/assets/stylesheets/new_ui.css.scss
+++ b/app/assets/stylesheets/new_ui.css.scss
@@ -20,6 +20,7 @@
 @import "new_ui/forms";
 @import "new_ui/layout";
 @import "new_ui/typography";
+@import "new_ui/animations";
 
 @import "new_ui/header";
 
@@ -55,6 +56,7 @@
 @import "new_ui/modules/shipping-profiles";
 @import "new_ui/modules/rfqs";
 @import "new_ui/modules/payments";
+@import "new_ui/modules/availability";
 
 // Vendor overrides
 @import "new_ui/vendor/raty";
