--- a/app/assets/stylesheets/new_ui/_forms.scss
+++ b/app/assets/stylesheets/new_ui/_forms.scss
@@ -16,7 +16,7 @@ $form-element-font-size: 16px;
 @import "forms/selectize";
 @import "forms/time-pickers";
 @import "forms/textarea";
-@import "forms/photos";
+@import "forms/images";
 @import "forms/attachments";
 @import "forms/color";
 @import "forms/fieldset-legend";
