--- a/app/new_ui_views/dashboard/company/support/tickets/_dashboard_form.html.haml
+++ b/app/new_ui_views/dashboard/company/support/tickets/_dashboard_form.html.haml
@@ -1,5 +1,5 @@
 - submit_label ||= t('reservations.form.send')
-- submit_and_resolve_label ||= t('reservations.form.send_and_resolve')
+- submit_and_resolve_label ||= t('reservations.form.resolve_html')
 - message_label ||= false
 - with_close ||= false
 
@@ -8,15 +8,15 @@
     = f.input :message, as: :text, label: message_label, placeholder: t('reservations.form.message.placeholder')
 
     %p.clearfix
-      %label.btn.btn-default.btn-xs{:for => "rfq-attachment"}
-        = t('support.attachment.add')
+      %label.btn.btn-default.btn-sm.rfq-attachment-trigger{:for => "rfq-attachment", :'data-attachment-label' => t('support.attachment.uploading')}
+        %span= t('support.attachment.add')
 
     %ul.attachments{:'data-attachment-list' => true }
       = render partial: 'dashboard/company/support/ticket_message_attachments/attachment', collection: message.attachments, as: :ticket_message_attachment
     %p
       = f.submit submit_label, class: 'btn btn-primary'
       - if with_close
-        = f.submit submit_and_resolve_label, class: 'btn btn-primary'
+        %button.btn.btn-primary{name: 'commit', value: 'Send and Resolve', }= submit_and_resolve_label
 
   = dashboard_simple_form_for ticket.attachments.build, url: dashboard_company_support_ticket_ticket_message_attachments_path(ticket), html: { multipart: true, class: 'hidden', :'data-rfq-attachment-form'=> true } do |f|
     - accept = Rails.application.config.private_upload_file_types.map { |ext| ".#{ext}"}.join(',')
