--- a/app/assets/stylesheets/dashboard/_transactables.css.scss
+++ b/app/assets/stylesheets/dashboard/_transactables.css.scss
@@ -11,7 +11,7 @@ div.booking-types-tab-menu {
     }
 
     .nested-fields-set {
-        > .fields {
+        .nested-fields {
             padding: 0 20px 20px;
             border: 1px solid #efefef;
             margin-bottom: 20px;
