--- a/app/assets/stylesheets/new_ui/_flash-message.scss
+++ b/app/assets/stylesheets/new_ui/_flash-message.scss
@@ -11,12 +11,16 @@
 }
 
 .alert {
+    position: relative;
+    padding-right: 60px;
     margin: 0 20px 10px;
     overflow: hidden;
 
     .close {
-        vertical-align: middle;
-        margin-left: 30px;
+        position: absolute;
+        top: 50%;
+        right: 15px;
+        transform: translateY(-50%);
         padding: 0;
         background: none;
         text-align: center;
@@ -46,7 +50,7 @@
     @include alert-color(success, $flash-success-background, $flash-success-color, $flash-success-close);
     @include alert-color(deleted, $flash-deleted-background, $flash-deleted-color, $flash-deleted-close);
 
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         margin-left: 0;
         margin-right: 0;
     }
