--- a/app/assets/stylesheets/new_ui/_mixins.scss
+++ b/app/assets/stylesheets/new_ui/_mixins.scss
@@ -55,3 +55,28 @@
     left: -999em;
     top: 0;
 }
+
+@mixin progressbar($background: $brand-primary, $position: relative) {
+    position: $position;
+    background: $background;
+
+    &:after {
+        content: "";
+        position: absolute;
+        top: 0; left: 0; bottom: 0; right: 0;
+        background-image: linear-gradient(
+            -45deg,
+            rgba(255, 255, 255, .2) 25%,
+            transparent 25%,
+            transparent 50%,
+            rgba(255, 255, 255, .2) 50%,
+            rgba(255, 255, 255, .2) 75%,
+            transparent 75%,
+            transparent
+            );
+        z-index: 1;
+        background-size: 50px 50px;
+        animation: progressbar 2s linear infinite;
+        overflow: hidden;
+    }
+}
