--- a/app/assets/stylesheets/new_ui/_panel.scss
+++ b/app/assets/stylesheets/new_ui/_panel.scss
@@ -1,3 +1,11 @@
+.content-box-a {
+    padding: 0 $panel-body-padding;
+
+    @media (min-width: $screen-md) {
+        padding: 0;
+    }
+}
+
 .panel-body {
   padding: 10px $panel-body-padding;
 
@@ -55,8 +63,8 @@
             position: relative;
             display: block;
             height: 50px;
-            padding-left: 20px;
-            padding-right: 20px;
+            padding-left: 15px;
+            padding-right: 15px;
             line-height: 50px;
             text-decoration: none;
             color: $panel-nav-link;
@@ -154,6 +162,7 @@
 }
 
 .panel-nav + .panel {
+    border: 1px solid $panel-nav-border;
     border-top: none;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
