--- a/app/assets/stylesheets/new_ui/modules/_rfqs.scss
+++ b/app/assets/stylesheets/new_ui/modules/_rfqs.scss
@@ -27,3 +27,18 @@
         margin-top: 10px;
     }
 }
+
+
+.rfq-attachment-trigger {
+    span {
+        position: relative;
+        z-index: 10;
+    }
+    &.uploading {
+        @include progressbar();
+
+        span {
+            color: #fff;
+        }
+    }
+}
