--- a/app/new_ui_views/dashboard/company/transactables/form_fields/_time_availability.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/form_fields/_time_availability.html.haml
@@ -1,6 +1,4 @@
-.row.nested-fields
-  %p
-    %i= "and" if index && index != 1
+.row.nested-fields{ :"data-junction-label" => t('pricing.availability.available_and')}
   .col-xs-11
     .form-inline
       = f.input :open_time, label: false, input_html: { value: f.object.try(:open_time_with_default) }, wrapper_html: { class: 'form-control-sm' }
@@ -19,5 +17,5 @@
   .col-xs-1
     .form-action
       %button.action--remove.remove_fields.dynamic{:type => "button"}
-        = t(:remove_period, scope: [:pricing, :availability])
+        = t('pricing.availability.remove_period')
 
