--- a/app/new_ui_views/dashboard/user_messages/show.html.haml
+++ b/app/new_ui_views/dashboard/user_messages/show.html.haml
@@ -1,14 +1,15 @@
+- title t('user_messages.title')
 - user_message = @user_messages.last.decorate
 - thread_recipient = user_message.thread_owner == current_user ? user_message.thread_recipient : user_message.thread_owner
 
 - content_for :page_header do
   %h1
-    = link_to t('user_messages.title'), dashboard_user_messages_path, class: 'hidden-xs hidden-sm'
-    %span.hidden-xs.hidden-sm >
-    = t('user_messages.conversation_with_name', { name: link_to(thread_recipient.first_name, thread_recipient) }).html_safe
-  - unless user_message.archived_for?(current_user)
-    .options
-      = link_to t('user_messages.archive_html'), user_message.archive_path, method: :put, class: 'btn btn-primary'
+    = link_to t('user_messages.title'), dashboard_user_messages_path
+    >
+    = link_to(thread_recipient.first_name, thread_recipient)
+
+
+.content-box-a
 
 
 .inbox-thread
@@ -22,3 +23,6 @@
         = render "dashboard_form"
 - else
   %p.thread-locked= t('user_messages.thread_locked')
+
+.form-actions
+  = link_to t('user_messages.archive_html'), user_message.archive_path, method: :put
