--- a/app/new_ui_views/dashboard/wish_list_items/index.html.haml
+++ b/app/new_ui_views/dashboard/wish_list_items/index.html.haml
@@ -1,10 +1,6 @@
 - content_for :page_header do
   %h1= t 'wish_lists.name'
 
-  - if @items.any?
-    .options
-      = link_to t('wish_lists.buttons.clear'), clear_dashboard_wish_list_items_path, method: :delete, data: { confirm: t('wish_lists.confirmations.clear') }
-
 .panel
   .panel-body
     - if @items.any?
@@ -12,4 +8,8 @@
         = render @items
     - else
       %p.empty-resultset= t 'wish_lists.empty_list'
+
+- if @items.any?
+  .form-actions
+    = link_to t('wish_lists.buttons.clear'), clear_dashboard_wish_list_items_path, method: :delete, data: { confirm: t('wish_lists.confirmations.clear') }
 
