NM-2612 Seller/Buyer profiles for User

--- a/app/assets/stylesheets/theme/sections/_reservations.scss
+++ b/app/assets/stylesheets/theme/sections/_reservations.scss
@@ -46,6 +46,10 @@ section.reservations {
       }
     }
 
+    .tree_container .help-inline {
+      color: $theme_red;
+    }
+
     .flash {
       &.error {
 
