--- a/app/new_ui_views/dashboard/companies/edit.html.haml
+++ b/app/new_ui_views/dashboard/companies/edit.html.haml
@@ -9,6 +9,6 @@
     .panel-body
       = render :partial => 'form', :locals => { :f => f }
 
-  .panel.panel-default.form-actions
+  .panel.form-actions
     .panel-body
       = f.button :submit, class: 'btn-lg btn-primary'
