--- a/app/new_ui_views/dashboard/company/products/index.html.haml
+++ b/app/new_ui_views/dashboard/company/products/index.html.haml
@@ -31,7 +31,7 @@
       %span.fa.fa-plus
       = t('dashboard.items.list_new_item')
 
-.panel.panel-default
+.panel
   .panel-body
 
     - if HiddenUiControls.find('dashboard/products/search').visible?
