--- a/app/new_ui_views/registrations/_form.html.haml
+++ b/app/new_ui_views/registrations/_form.html.haml
@@ -1,6 +1,6 @@
 = dashboard_simple_form_for resource, :as => resource_name, :url => url, :html => { class: "form-expandable" } do |f|
 
-  .panel.panel-default
+  .panel
     .panel-body
 
       - @form_components.each do |form_component|
