--- a/app/new_ui_views/registrations/edit.html.haml
+++ b/app/new_ui_views/registrations/edit.html.haml
@@ -4,12 +4,8 @@
   %h1= yield :title
 
   .options
-    = link_to 'View Profile', user_path(current_user)
+    = link_to t('dashboard.user_profile.view_profile'), user_path(current_user)
 
+= render 'dashboard/shared/profile_nav', active: :default
 
 = render :partial => "registrations/form", :locals => { :url => registration_path(resource_name), :country => @country }
-
-
-/ - content_for :domready do
-/   new CategoriesController($('#edit_user'));
-/   new EditUserForm()
