--- a/app/views/shared/_checkout_extra_fields.html.haml
+++ b/app/views/shared/_checkout_extra_fields.html.haml
@@ -24,8 +24,8 @@
           - if attribute.public? && buyer_profile_form.object.field_blank_or_changed?(attribute.name)
             = draw_attribute_for_form(attribute, properties_form)
 
-      - unless buyer_profile_form.object.valid?
-        - buyer_profile_form.object.instance_profile_type.try(:categories).try(:roots).find_each do |category|
+      - buyer_profile_form.object.instance_profile_type.try(:categories).try(:roots).find_each do |category|
+        - if buyer_profile_form.object.category_blank_or_changed?(category)
           = render partial: 'shared/category_old_bootstrap', locals: { category: category, f: buyer_profile_form, categorizable: buyer_profile_form.object.instance_profile_type }
 
     = render :partial => 'approval_requests/form', :locals => { f: uf, object: uf.object, only_required: true, only_missing: true }
