--- a/app/views/dashboard/user_reservations/_reservation_successful.html.haml
+++ b/app/views/dashboard/user_reservations/_reservation_successful.html.haml
@@ -1,5 +1,5 @@
 %h4.reservation-emphasis
-  Your booking was requested successfully!
+  = t('reservations.booking_was_requested_successfully')
 
 .reservation-list.just-booked
   = render 'reservation', reservation: @reservation.decorate
